shift away from sphinx_build

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ description =  A collection of Koji client plugins and utils
 author = Christopher O'Brien
 author_email = obriencj@gmail.com
 
+copyright_years = 2020-2023
+
 license = GNU General Public License v3 (GPLv3)
 license_files =
   LICENSE
@@ -115,21 +117,6 @@ kojismokydingo =
 # most convenient and available way to get started with unit testing.
 
 test = nosetests
-
-
-[build_sphinx]
-# some of the configuration for sphinx. The rest of it lives over in
-# docs/conf.py
-
-version = 2.2
-release = 2.2.0
-
-project = kojismokydingo
-copyright = 2020-2023, Christopher O'Brien
-
-build-dir = build/sphinx
-builder = dirhtml html
-source-dir = docs
 
 
 [tox:tox]
@@ -267,15 +254,17 @@ skip_install = True
 
 basepython = python3.9
 
+# somewhere, some idiot is proud of the removal of the build_sphinx
+# setuptools integration.
 commands =
-  python -B setup.py build_sphinx
+  python -B -m sphinx.cmd.build -b dirhtml \
+    docs build/sphinx/dirhtml
 
-# sphinx 7 not only doesn't have a build_sphinx command, but it also
-# completely ignores the settings in setup.cfg, therefore it can EABOD
-# and we'll keep using the older one via setuptools, drinking in the
-# hot deprecation tears of the setuptools devs like a fine sake
+  python -B -m sphinx.cmd.build -b html \
+    docs build/sphinx/html
+
 deps =
-  sphinx<7
+  sphinx
 
 
 [testenv:build]
