tweaking docs generation  [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -254,14 +254,8 @@ skip_install = True
 
 basepython = python3.9
 
-# somewhere, some idiot is proud of the removal of the build_sphinx
-# setuptools integration.
 commands =
-  python -B -m sphinx.cmd.build -b dirhtml \
-    docs build/sphinx/dirhtml
-
-  python -B -m sphinx.cmd.build -b html \
-    docs build/sphinx/html
+  python -B -m sphinx.cmd.build -b dirhtml docs build/sphinx
 
 deps =
   sphinx
