--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path:
-            build/sphinx/dirhtml
+            build/sphinx
 
 
 # The end.
