tweaks from master

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ description =  A collection of Koji client plugins and utils
 author = Christopher O'Brien
 author_email = obriencj@gmail.com
 
+copyright_years = 2020-2023
+
 license = GNU General Public License v3 (GPLv3)
 license_files =
   LICENSE
@@ -117,23 +119,8 @@ kojismokydingo =
 test = nosetests
 
 
-[build_sphinx]
-# some of the configuration for sphinx. The rest of it lives over in
-# docs/conf.py
-
-version = 2.1
-release = 2.1.0
-
-project = kojismokydingo
-copyright = 2020-2023, Christopher O'Brien
-
-build-dir = build/sphinx
-builder = dirhtml html
-source-dir = docs
-
-
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39,310,311},coverage,bandit
+envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311},coverage
 skip_missing_interpreters = true
 
 
@@ -168,10 +155,27 @@ download = false
 basepython = python3.9
 
 commands =
-  python -B -m bandit --ini setup.cfg -qr kojismokydingo/ koji_cli_plugins/
+  python -B -m bandit --ini setup.cfg \
+    -qr kojismokydingo/ koji_cli_plugins/
 
 deps =
   bandit
+
+
+[testenv:bandit-sarif]
+
+basepython = python3.9
+
+commands =
+  python -B -m bandit --ini setup.cfg \
+    -f sarif -o bandit.sarif \
+    -qr kojismokydingo/ koji_cli_plugins/
+  python -B -m sarif summary bandit.sarif
+
+deps =
+  bandit
+  bandit-sarif-formatter
+  sarif-tools
 
 
 [testenv:flake8]
@@ -184,6 +188,23 @@ commands =
 deps =
   flake8
 
+skip_install = True
+
+
+[testenv:twine]
+
+basepython = python3.9
+
+commands =
+  python -B -m build -n .
+  python -B -m twine check dist/*.whl
+
+deps =
+  build
+  twine
+
+skip_install = True
+
 
 [testenv:mypy]
 
@@ -195,6 +216,19 @@ commands =
 deps =
   mypy
   types-pkg_resources
+
+
+[testenv:quicktest]
+
+basepython = python3.9
+
+commands =
+  python -B -I -m nose
+
+deps =
+  nose-py3
+
+download = True
 
 
 [testenv:coverage]
@@ -221,12 +255,21 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B setup.py build_sphinx
+  python -B -m sphinx.cmd.build -b dirhtml docs build/sphinx
 
-# sphinx 7 not only doesn't have a build_sphinx command, but it also
-# completely ignores the settings in setup.cfg
 deps =
-  sphinx<7
+  sphinx
+
+
+[testenv:build]
+
+basepython = python3.9
+
+commands =
+  python -B -m build -n .
+
+deps =
+  build
 
 
 [nosetests]
