--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -70,6 +70,9 @@ jobs:
       - build-rpms
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Install Dependencies
         run: |
           sudo apt-get install hub
