--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -159,6 +159,9 @@ jobs:
       - deploy-pypi
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Fetch python dist content
         uses: actions/download-artifact@v3
         with:
