trigger tests against koji git nightly

--- a/setup.cfg
+++ b/setup.cfg
@@ -150,6 +150,22 @@ download = true
 download = false
 
 
+[testenv:koji-git]
+
+# Koji 1.34.0 snuck in an API break with the removal of some values.
+# We don't want to be surprised by that again, so we'll schedule this
+# test to be triggered nightly. This should give us lots of warning if
+# there's a python API change that hits us.
+
+basepython = python3.9
+
+# remove defusedxml dep after https://pagure.io/koji/issue/4067 is fixed
+deps =
+  git+https://pagure.io/koji.git@master
+  nose-py3
+  defusedxml
+
+
 [testenv:bandit]
 
 basepython = python3.9
