housecleaning [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,12 @@
 # This file defines the general configuration for the kojismokydingo
-# wheel, and the tools tox, nose, flake8, coverage, and sphinx
+# wheel, as well as the the tools tox, nose, flake8, mypy, coverage,
+# bandit, and sphinx. However, most interactions should be facilitated
+# via targets in the Makefile rather than invoking tox or setup.py
+# directly.
 
 
 [metadata]
+
 name = kojismokydingo
 version = 2.2.0
 description =  A collection of Koji client plugins and utils
@@ -47,6 +51,7 @@ classifiers =
 
 
 [options]
+
 packages =
   koji_cli_plugins
   kojismokydingo
@@ -66,6 +71,7 @@ tests_require =
 
 
 [options.entry_points]
+
 koji_smoky_dingo =
   affected-targets = kojismokydingo.cli.tags:AffectedTargets
   block-env-var = kojismokydingo.cli.tags:BlockEnvVar
@@ -105,23 +111,24 @@ console_scripts =
 
 
 [options.package_data]
+
 kojismokydingo =
   py.typed
 
 
 [aliases]
+
 # nose acts enough like the original test command, but without the
 # extremely obnoxious deprecation warning. And why are they
 # deprecating the test command? So someone can remove approximately 40
 # lines of code from setuptools, despite the test command being the
 # most convenient and available way to get started with unit testing.
-
 test = nosetests
 
 
 [tox:tox]
 envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311},coverage
-skip_missing_interpreters = true
+skip_missing_interpreters = True
 
 
 [testenv]
@@ -131,13 +138,13 @@ setenv =
 commands =
   python -B -m coverage run -m nose
 
-sitepackages = false
+sitepackages = False
 
 deps =
   coverage
   nose-py3
 
-download = true
+download = True
 
 
 [testenv:py36]
@@ -147,7 +154,7 @@ download = true
 # version, not the matching one. Due to insanity with the recent
 # python leadership, there are breaking API changes in 3.11 and
 # onwards which make the vendored 3.6 site packages fail.
-download = false
+download = False
 
 
 [testenv:koji-git]
@@ -165,6 +172,8 @@ deps =
   nose-py3
   defusedxml
 
+recreate = True
+
 
 [testenv:bandit]
 
@@ -176,6 +185,8 @@ commands =
 
 deps =
   bandit
+
+skip_install = True
 
 
 [testenv:bandit-sarif]
@@ -192,6 +203,8 @@ deps =
   bandit
   bandit-sarif-formatter
   sarif-tools
+
+skip_install = True
 
 
 [testenv:flake8]
@@ -248,7 +261,8 @@ download = True
 
 
 [testenv:coverage]
-# this is just here to combine the coverage output
+
+# this is just here to combine the coverage output together
 
 setenv =
   COVERAGE_FILE = .coverage
@@ -315,19 +329,19 @@ exclude_lines =
 
 
 [bandit]
-# B101 complains about asserts
 
+# B101 complains about asserts
 skips = B101
 
 
 [flake8]
+
 # E303 complains about more than one blank lines between methods in a class
 # E731 assigning a lambda to a variable
 # E741 ambiguous variable name
 # F401 ambiguous variable name
 # F812 list comprehension redefines variable (I reuse tmp names)
 # W504 line break after binary operator
-
 ignore = E303,E731,E741,F401,F812,W504
 
 filename =
@@ -349,6 +363,7 @@ exclude =
 
 
 [mypy]
+
 no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
@@ -356,6 +371,7 @@ mypy_path = stubs/
 
 
 [gh-actions]
+
 python =
   3.7: py37
   3.8: py38
