--- a/.github/workflows/build_rpms.yml
+++ b/.github/workflows/build_rpms.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
@@ -44,9 +44,9 @@ jobs:
           specfile: kojismokydingo.spec
 
       - name: Store Source RPM
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: RPMs
+          name: RPMs-srpm
           path: ${{ steps.srpm.outputs.path }}
 
   build-rpm:
@@ -67,10 +67,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
@@ -87,9 +87,9 @@ jobs:
           tools/launch-build.sh ${{ matrix.platform }}
 
       - name: Store RPM ${{ matrix.platform }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: RPMs
+          name: RPMs-${{ matrix.platform }}
           path: dist/${{ matrix.platform }}/RPMS/noarch/*.rpm
 
 
