--- a/setup.cfg
+++ b/setup.cfg
@@ -240,7 +240,7 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B -m mypy kojismokydingo
+  python -B -m mypy kojismokydingo --show-traceback --pdb
 
 deps =
   mypy
@@ -368,6 +368,7 @@ no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
 mypy_path = stubs/
+plugins = stubs/proxytype.py
 
 
 [gh-actions]
