--- a/setup.cfg
+++ b/setup.cfg
@@ -367,8 +367,11 @@ exclude =
 no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
-mypy_path = stubs/
-plugins = stubs/proxytype.py
+
+# I am intentionally making proxytype available as both a plugin, and
+# as an importable module for type annotations
+mypy_path = mypy/
+plugins = mypy/proxytype.py
 
 
 [gh-actions]
