mypy plugin and typing info for koji.MultiCallSession (#173)
provides a mypy plugin that allows for static analysis of the methods of koji.MultiCallSession

--- a/setup.cfg
+++ b/setup.cfg
@@ -240,7 +240,7 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B -m mypy kojismokydingo
+  python -B -m mypy kojismokydingo --show-traceback --pdb
 
 deps =
   mypy
@@ -367,7 +367,11 @@ exclude =
 no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
-mypy_path = stubs/
+
+# I am intentionally making proxytype available as both a plugin, and
+# as an importable module for type annotations
+mypy_path = mypy/
+plugins = mypy/proxytype.py
 
 
 [gh-actions]
