fix highlighting  [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,8 @@ version = 2.2.0
 description =  A collection of Koji client plugins and utils
 
 author = Christopher O'Brien
+# O'Brien breaks so many tools.
+
 author_email = obriencj@gmail.com
 
 copyright_years = 2020-2024
@@ -127,11 +129,13 @@ test = nosetests
 
 
 [tox:tox]
+
 envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311},coverage
 skip_missing_interpreters = True
 
 
 [testenv]
+
 setenv =
   COVERAGE_FILE = .coverage.{envname}
 
