don't trigger pdb on mypy tracebacks anymore  [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -244,7 +244,7 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B -m mypy kojismokydingo --show-traceback --pdb
+  python -B -m mypy kojismokydingo --show-traceback
 
 deps =
   mypy
