--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -33,6 +33,9 @@ on:
 
 jobs:
   run-bandit:
+    permissions:
+      security-events: write
+
     uses: ./.github/workflows/run_bandit.yml
 
   run-tests:
