use preoccupied.proxytype

--- a/setup.cfg
+++ b/setup.cfg
@@ -246,6 +246,7 @@ commands =
 
 deps =
   mypy
+  preoccupied.proxytype
   types-pkg_resources
 
 
@@ -373,7 +374,8 @@ strict_optional = False
 # I am intentionally making proxytype available as both a plugin, and
 # as an importable module for type annotations
 mypy_path = mypy/
-plugins = mypy/proxytype.py
+plugins =
+  preoccupied.proxytype
 
 
 [gh-actions]
