offload koji types to preoccupied.koji-typing

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ zip_safe = False
 install_requires =
   appdirs
   koji
+  # preoccupied.koji-typing
   typing_extensions ; python_version < '3.10'
 
 tests_require =
@@ -147,6 +148,7 @@ sitepackages = False
 deps =
   coverage
   nose-py3
+  git+https://github.com/obriencj/koji-typing.git
 
 download = True
 
@@ -246,6 +248,7 @@ commands =
 
 deps =
   mypy
+  git+https://github.com/obriencj/koji-typing.git
   preoccupied.proxytype
   types-pkg_resources
 
