--- a/setup.cfg
+++ b/setup.cfg
@@ -146,7 +146,7 @@ sitepackages = False
 
 deps =
   coverage
-  nose-py3
+  nose-py3 == 1.6.3
 
 download = True
 
@@ -172,7 +172,7 @@ basepython = python3.9
 
 deps =
   git+https://pagure.io/koji.git@master
-  nose-py3
+  nose-py3 == 1.6.3
 
 recreate = True
 
@@ -257,7 +257,7 @@ commands =
   python -B -I -m nose
 
 deps =
-  nose-py3
+  nose-py3 == 1.6.3
 
 download = True
 
