--- a/setup.cfg
+++ b/setup.cfg
@@ -130,7 +130,7 @@ test = nosetests
 
 [tox:tox]
 
-envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311},coverage
+envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311,312},coverage
 skip_missing_interpreters = True
 
 
@@ -140,13 +140,14 @@ setenv =
   COVERAGE_FILE = .coverage.{envname}
 
 commands =
-  python -B -m coverage run -m nose
+  python -B -m coverage run -m nose tests
 
 sitepackages = False
 
 deps =
   coverage
-  nose-py3 == 1.6.3
+  git+https://github.com/obriencj/nose-py3@py3_compat
+  # nose-py3
 
 download = True
 
@@ -172,7 +173,8 @@ basepython = python3.9
 
 deps =
   git+https://pagure.io/koji.git@master
-  nose-py3 == 1.6.3
+  git+https://github.com/obriencj/nose-py3@py3_compat
+  # nose-py3 == 1.6.3
 
 recreate = True
 
@@ -254,10 +256,11 @@ deps =
 basepython = python3.9
 
 commands =
-  python -B -I -m nose
+  python -B -I -m nose tests
 
 deps =
-  nose-py3 == 1.6.3
+  git+https://github.com/obriencj/nose-py3@py3_compat
+  # nose-py3 == 1.6.3
 
 download = True
 
