numpy 2.0.0 broke nose-py3, work from my fork for a bit

--- a/setup.cfg
+++ b/setup.cfg
@@ -147,7 +147,7 @@ sitepackages = False
 
 deps =
   coverage
-  git+https://github.com/obriencj/nose-py3@py3_compat
+  git+https://github.com/obriencj/nose-py3@drop_numpy
   # nose-py3
 
 download = True
@@ -174,8 +174,8 @@ basepython = python3.9
 
 deps =
   git+https://pagure.io/koji.git@master
-  git+https://github.com/obriencj/nose-py3@py3_compat
-  # nose-py3 == 1.6.3
+  git+https://github.com/obriencj/nose-py3@drop_numpy
+  # nose-py3
 
 recreate = True
 
@@ -260,8 +260,8 @@ commands =
   python -B -I -m nose tests
 
 deps =
-  git+https://github.com/obriencj/nose-py3@py3_compat
-  # nose-py3 == 1.6.3
+  git+https://github.com/obriencj/nose-py3@drop_numpy
+  # nose-py3
 
 download = True
 
