updating tox configuration for nose-py3

--- a/setup.cfg
+++ b/setup.cfg
@@ -129,6 +129,12 @@ kojismokydingo =
 test = nosetests
 
 
+[vars]
+
+nose = nose-py3
+# nose = git+https://github.com/obriencj/nose-py3@safer_str
+
+
 [tox:tox]
 
 envlist = flake8,mypy,bandit,twine,py{37,38,39,310,311,312},coverage
@@ -147,8 +153,7 @@ sitepackages = False
 
 deps =
   coverage
-  git+https://github.com/obriencj/nose-py3@drop_numpy
-  # nose-py3
+  {[vars]nose}
 
 download = True
 
@@ -174,8 +179,7 @@ basepython = python3.9
 
 deps =
   git+https://pagure.io/koji.git@master
-  git+https://github.com/obriencj/nose-py3@drop_numpy
-  # nose-py3
+  {[vars]nose}
 
 recreate = True
 
@@ -260,8 +264,7 @@ commands =
   python -B -I -m nose tests
 
 deps =
-  git+https://github.com/obriencj/nose-py3@drop_numpy
-  # nose-py3
+  {[vars]nose}
 
 download = True
 
