no longer use the proxytype plugin, and change deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -249,8 +249,7 @@ commands =
 
 deps =
   mypy
-  preoccupied.proxytype
-  types-pkg_resources
+  types-setuptools
   git+https://github.com/obriencj/koji-typing.git
 
 
@@ -379,8 +378,6 @@ strict_optional = False
 # I am intentionally making proxytype available as both a plugin, and
 # as an importable module for type annotations
 mypy_path = mypy/
-plugins =
-  preoccupied.proxytype
 
 
 [gh-actions]
