--- a/setup.cfg
+++ b/setup.cfg
@@ -253,7 +253,7 @@ commands =
 
 deps =
   mypy
-  types-pkg_resources
+  types-setuptools
 
 
 [testenv:quicktest]
@@ -351,7 +351,10 @@ skips = B101
 # F401 ambiguous variable name
 # F812 list comprehension redefines variable (I reuse tmp names)
 # W504 line break after binary operator
-ignore = E303,E731,E741,F401,F812,W504
+ignore =
+  E303,E731,E741,
+  F401,F812,
+  W504
 
 filename =
   *.py
