--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           name: coverage-data-py${{ matrix.python-version }}
           path: .coverage.py*
+          include-hidden-files: true
 
   coverage:
     runs-on: ubuntu-latest
