--- a/.github/workflows/build_rpms.yml
+++ b/.github/workflows/build_rpms.yml
@@ -50,7 +50,7 @@ jobs:
           path: ${{ steps.srpm.outputs.path }}
 
   build-rpm:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
