2025, fun with vars

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ author = Christopher O'Brien
 
 author_email = obriencj@gmail.com
 
-copyright_years = 2020-2024
+copyright_years = 2020-2025
 
 license = GNU General Public License v3 (GPLv3)
 license_files =
@@ -134,6 +134,8 @@ test = nosetests
 nose = nose-py3
 # nose = git+https://github.com/obriencj/nose-py3@safer_str
 
+favpython = python3.9
+
 
 [tox:tox]
 
@@ -175,7 +177,7 @@ download = False
 # test to be triggered nightly. This should give us lots of warning if
 # there's a python API change that hits us.
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 deps =
   git+https://pagure.io/koji.git@master
@@ -186,7 +188,7 @@ recreate = True
 
 [testenv:bandit]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m bandit --ini setup.cfg \
@@ -200,7 +202,7 @@ skip_install = True
 
 [testenv:bandit-sarif]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m bandit --ini setup.cfg \
@@ -218,7 +220,7 @@ skip_install = True
 
 [testenv:flake8]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
@@ -231,7 +233,7 @@ skip_install = True
 
 [testenv:twine]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m build -n .
@@ -246,7 +248,7 @@ skip_install = True
 
 [testenv:mypy]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m mypy kojismokydingo --show-traceback
@@ -258,7 +260,7 @@ deps =
 
 [testenv:quicktest]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -I -m nose tests
@@ -291,7 +293,7 @@ skip_install = True
 
 [testenv:sphinx]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m sphinx.cmd.build -b dirhtml docs build/sphinx
@@ -302,7 +304,7 @@ deps =
 
 [testenv:build]
 
-basepython = python3.9
+basepython = {[vars]favpython}
 
 commands =
   python -B -m build -n .
