setuptools sucks, as usual

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,6 @@ classifiers =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Developers
-  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
@@ -155,6 +154,7 @@ sitepackages = False
 
 deps =
   coverage
+  docutils
   {[vars]nose}
 
 download = True
